--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -63,7 +63,9 @@
 
                 <md-input-container color="accent"
                     class="date_picker">
-                    <input mdInput #initial
+                    <input mdInput
+                        #initial
+                        maxlength="10"
                         (change)="validateInitial(initial.value, final.value)"
                         [readonly]="false"
                         [mdDatepicker]="resultPickerInitial"
@@ -78,19 +80,20 @@
                 <md-datepicker #resultPickerInitial
                     [touchUi]="touch"
                     [startAt]="startAt"
-
                     [startView]="yearView ? 'year' : 'month'">
                 </md-datepicker>
 
                 <md-input-container color="accent"
                     class="date_picker">
-                    <input mdInput #final
+                    <input mdInput
+                        #final
                         (change)="validateFinal(initial.value, final.value)"
                         [readonly]="false"
                         [mdDatepicker]="resultPicker"
                         formControlName="finalDate"
                         [min]="minDate"
                         [max]="maxDate"
+                        maxlength="10"
                         placeholder="{{'app.retry.finalDate' | translate}}">
 
                 </md-input-container>
@@ -98,7 +101,6 @@
                     [mdDatepickerToggle]="resultPicker"></button>
                 <md-datepicker #resultPicker
                     [touchUi]="touch"
-
                     [startAt]="startAt"
                     [startView]="yearView ? 'year' : 'month'">
                 </md-datepicker>
@@ -135,6 +137,13 @@
                 *ngIf="isSearching"></md-progress-bar>
             <div class="top_action_container"
                 *ngIf="!isSearching">
+                <div>
+                    <span class="fontClass">{{ 'app.retry.application' | translate}}: </span>
+                    <span>{{ applicationName }}</span>
+                    <br/>
+                    <span class="fontClass">{{ 'app.retry.service' | translate}}: </span>
+                    <span>{{ serviceName }}</span>
+                </div>
                 <button md-raised-button
                     (click)="viewDetailService()"
                     color="primary">{{'app.retry.viewDetailService' | translate}}</button>
@@ -195,23 +204,45 @@
 
                 </p-column>
                 <p-column styleClass="col-button"
-                    [style]="{'width':'40px'}">
+                    [style]="styleCellActions">
                     <ng-template pTemplate="header">
-                        <span>{{'app.retry.results.xml' | translate}}</span>
+                        <span>{{'app.common.xmlResponse' | translate}}</span>
                     </ng-template>
                     <ng-template let-transactionTemplate="rowData"
                         pTemplate="body">
-                        <md-icon md-list-icon
-                            *ngIf="!isShowingXml"
-                            class="xml"
-                            (click)="showXml(transactionTemplate)"
-                            mdTooltip="{{'app.common.xml' | translate}}">settings_ethernet</md-icon>
-                        <md-spinner class="example-margin"
-                            color="accent"
-                            *ngIf="isShowingXml && ( selectedTransactionXml &&transactionTemplate.id == selectedTransactionXml.id)"
-                            mode="indeterminate">
-                        </md-spinner>
-
+                        <div class="container_actions">
+                            <md-icon md-list-icon
+                                *ngIf="!isShowingXmlResponse && transactionTemplate.end"
+                                class="xml"
+                                (click)="showXmlResponse(transactionTemplate)"
+                                mdTooltip="{{'app.common.xmlResponse' | translate}}">subdirectory_arrow_left</md-icon>
+                            <md-spinner class="example-margin"
+                                color="accent"
+                                *ngIf="isShowingXmlResponse && ( selectedTransactionXml && transactionTemplate.id == selectedTransactionXml.id)"
+                                mode="indeterminate">
+                            </md-spinner>
+                        </div>
+                    </ng-template>
+                </p-column>
+                <p-column styleClass="col-button"
+                    [style]="styleCellActions">
+                    <ng-template pTemplate="header">
+                        <span>{{'app.common.xmlRequest' | translate}}</span>
+                    </ng-template>
+                    <ng-template let-transactionTemplate="rowData"
+                        pTemplate="body">
+                        <div class="container_actions">
+                            <md-icon md-list-icon
+                                *ngIf="!isShowingXmlRequest"
+                                class="xml"
+                                (click)="showXmlRequest(transactionTemplate)"
+                                mdTooltip="{{'app.common.xmlRequest' | translate}}">subdirectory_arrow_right</md-icon>
+                            <md-spinner class="example-margin"
+                                color="accent"
+                                *ngIf="isShowingXmlRequest && ( selectedTransactionXml && transactionTemplate.id == selectedTransactionXml.id)"
+                                mode="indeterminate">
+                            </md-spinner>                            
+                        </div>
                     </ng-template>
                 </p-column>
                 <ng-template let-transactionTemplate
