add error page and manage login adal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,8 @@
 
         <button md-icon-button
             *ngIf="authManager.getIsLogin()"
-            (click)="exitApp()">
+            (click)="exitApp()" mdTooltip="Salir">
+
             <md-icon>exit_to_app</md-icon>
         </button>
 
