--- a/src/app/retry/admin-retry/admin-retry.component.scss
+++ b/src/app/retry/admin-retry/admin-retry.component.scss
@@ -97,3 +97,9 @@ td span {
 .fontClass{
     font-weight: bold;
 }
+
+.container_paginator{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
