--- a/src/app/retry/retry-history/retry-history.component.scss
+++ b/src/app/retry/retry-history/retry-history.component.scss
@@ -84,3 +84,9 @@ md-spinner {
     display: flex;
     justify-content: center;
 }
+
+.container_paginator{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
