--- a/src/app/retry/modal-xml/modal-xml.component.html
+++ b/src/app/retry/modal-xml/modal-xml.component.html
@@ -1,6 +1,6 @@
 <div class="flex_containter">
     <h2 md-dialog-title>
-     {{ 'app.retry.results.transaction' | translate }} {{type}} - {{ transactionId }}
+     {{ 'app.retry.results.transaction.title' | translate }} {{type}} - {{ transactionId }}
      <md-icon md-icon
         class="close"
         (click)="dialogRef.close()"
